--- a/BootStrap/css2/bootstrap.css
+++ b/BootStrap/css2/bootstrap.css
@@ -4,31 +4,37 @@ h1{
 	margin: auto;
 	padding-top: 0px;
 }
+a {
+   color: #808080;
+}
+.carousel {
+   position: center;
+   width: 100%;
+   height: 75%;
+}
+.carousel .item {
+  height: 100%;
 
+}
+.item img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  min-width: 100%;
+  height: 100px;
+}
 .navlinks{
-	color: #808080;
 	padding: 20px;
 	font-size: 14px;
 	margin: 0 auto;
 	position: absolute;
-   	top: 0;
-   	right: 0;
-   	text-align: center;
-   	width: 80%;
+   top: 0;
+   right: 0;
+   text-align: center;
+   width: 80%;
   	word-spacing: 30px;
 }
-.jumbotron{
-	padding: 1px;
-   padding-left: 1px;
-   padding-right: 1px;
-   position: center;
-}
-.image {
-   position: center;
-   padding: 1px;
-   padding-left: 1px;
-   padding-right: 1px;
-}
+
 h2{
 	text-align: center;
 	font-size: 40px;
@@ -56,3 +62,11 @@ h4 {
 	text-align: left;
 	padding-left: 25px;
 }
+.col-md-4 {
+   background-color: #F08080;
+   color: white;
+   font-size: 12px;
+   height: 25%;
+   padding: 35px; 
+}
+
