--- a/BootStrap/css2/twitter.css
+++ b/BootStrap/css2/twitter.css
@@ -6,6 +6,7 @@
 	color: #696969;
 	outline: 1px solid #DCDCDC;
 
+
 }
 .header .col-md-4 {
 	padding-top: 8px;
@@ -45,7 +46,7 @@ body {
 	font-weight: normal;
 	font-style: 9px;
 	font-size: 14px;
-	padding: 2px;
+	padding: 1px;
 	margin: 9px;
 }
 
@@ -63,6 +64,8 @@ body {
 	color: #FFFFFF;
 	border-radius: 8px;
 	width: 250px;
+	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	font-size: 14px;
 }
 
 .sidebar img { 
@@ -96,6 +99,7 @@ img {
 	color: #FFFFFF;
 	border-radius: 5px;
 	width: 90px;
+
 }
 
 .header .input-group1 {
@@ -122,6 +126,7 @@ img {
 	height: 350px;
 	
 }
+
 
 .header-three {
 	width: 100%;
@@ -150,8 +155,10 @@ img {
 .sidebar h1 {
 	margin-top: -175px;
 	border-radius: 5px;
+}
 
-
+.profilepic {
+	border: solid white;
 }
 
 .header-three .img {
@@ -164,16 +171,66 @@ img {
 .header-three .btn-default {
 	border: none;
 	padding: 2px;	
-}
 
+}
+/*
 footer {
    position: fixed;
    bottom: 0px;
    width: 100%;
    height: 60px; 
    background: white;
-   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;;
+   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
    font-size:95%;
+}*/
+
+.maindata h4 {
+	border: 1px solid #DCDCDC;
+	background-color: white;
+	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	font-size: 20px;
+	text-align: left;
+	color: black;
+	width: 100%;
+	height: 60px;
+	padding: 10px;
+	border-radius: 5px;
+	padding-top: 13px;
+	padding-left: 1px;
+
 }
 
+.maindata h3 {
+	border: 1px solid #DCDCDC;
+	background-color: white;
+	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	font-size: 27px;
+	text-align: left;
+	color: black;
+	width: 100%;
+	height: 400px;
+	padding: 10px;
+	border-radius: 5px;
 
+}
+.maindata .btn{
+	border: none;
+	outline: none;
+	margin-left: 0px;
+	 padding: 30px;
+	 padding-top: 3px;
+	 padding-bottom: 1px;
+	 font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	font-size: 20px;
+	
+}
+.newsfeed {
+	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	font-size: 25px;
+
+}
+
+.maindata img {
+	border-radius: 5px;
+
+}
